--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # dependencies
 /node_modules
+package-lock.json
 
 # profiling files
 chrome-profiler-events.json
@@ -42,3 +43,7 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+
+
+
