--- a/package.json
+++ b/package.json
@@ -11,17 +11,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.7",
+    "@angular/cdk": "^7.3.3",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.3",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.5",
+    "angular-calendar": "^0.26.6",
+    "angularx-flatpickr": "^6.1.0",
+    "bootstrap": "^4.3.1",
+    "calendar-utils": "^0.2.3",
     "core-js": "^2.5.4",
+    "date-fns": "^1.30.1",
+    "flatpickr": "^4.5.6",
+    "hammerjs": "^2.0.8",
+    "ng-bootstrap": "^1.6.3",
+    "rrule": "^2.6.0",
     "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
+    "tslib": "^1.9.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
