--- a/package.json
+++ b/package.json
@@ -23,20 +23,21 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.5",
     "angular-calendar": "^0.26.6",
+    "angular-draggable-droppable": "4.3.0",
+    "angular-resizable-element": "3.2.4",
     "angularx-flatpickr": "^6.1.0",
     "bootstrap": "^4.3.1",
     "calendar-utils": "^0.2.3",
     "core-js": "^2.5.4",
     "date-fns": "^1.30.1",
     "flatpickr": "^4.5.6",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng-bootstrap": "^1.6.3",
     "rrule": "^2.6.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.3",
-    "zone.js": "~0.8.26",
-    "angular-draggable-droppable": "4.3.0",
-    "angular-resizable-element": "3.2.4"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
