--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "^2.5.4",
     "date-fns": "^1.30.1",
     "flatpickr": "^4.5.6",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng-bootstrap": "^1.6.3",
     "ng-pick-datetime": "^7.0.0",
